ENH: SlicerQt - qMRMLNodeSelector now support more than one node type. The nodeTypes property is a QStringList directly editable under designer.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11939 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCLI/Resources/UI/qSlicerCLIModule.ui
+++ b/Base/QTCLI/Resources/UI/qSlicerCLIModule.ui
@@ -88,8 +88,10 @@
             </item>
             <item>
              <widget class="qMRMLNodeSelector" name="MRMLCommandLineModuleNodeSelector">
-              <property name="NodeType">
-               <string>vtkMRMLCommandLineModuleNode</string>
+              <property name="nodeTypes">
+               <stringlist>
+                <string>vtkMRMLCommandLineModuleNode</string>
+               </stringlist>
               </property>
               <property name="ShowHidden">
                <bool>true</bool>
