--- a/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
+++ b/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
@@ -32,7 +32,7 @@
      <x>0</x>
      <y>0</y>
      <width>787</width>
-     <height>26</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -156,6 +156,9 @@
        <property name="text">
         <string>Manipulate Slice Views</string>
        </property>
+       <property name="contentsFrameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
        <layout class="QVBoxLayout" name="verticalLayout_2"/>
       </widget>
      </item>
@@ -163,6 +166,9 @@
       <widget class="qCTKCollapsibleButton" name="View3DControlsCollapsibleWidget">
        <property name="text">
         <string>Manipulate 3D View</string>
+       </property>
+       <property name="contentsFrameShape">
+        <enum>QFrame::StyledPanel</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3"/>
       </widget>
