ENH:  add models to Qt Tractography module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12031 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
+++ b/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
@@ -70,6 +70,7 @@
      <property name="nodeTypes">
       <stringlist>
        <string>vtkMRMLFiducialListNode</string>
+       <string>vtkMRMLModelNode</string>
       </stringlist>
      </property>
     </widget>
