BUG: SlicerQT - In FiducialTractographySeeding module UI, the ShowHidden was set to False whereas the HideFromEditor property from the node was set to true.
That explains why the node wasn't visible after the user clicked on the Add button.

Note: We will add a developer warning in case the NodeType associated to the nodeSelector
corresponds to a node with HideFromEditor set to true.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12127 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
+++ b/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>393</width>
-    <height>526</height>
+    <width>399</width>
+    <height>545</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,6 +36,9 @@
       <stringlist>
        <string>vtkMRMLTractographyFiducialSeedingNode</string>
       </stringlist>
+     </property>
+     <property name="showHidden">
+      <bool>true</bool>
      </property>
      <property name="ShowHidden" stdset="0">
       <bool>true</bool>
@@ -297,13 +300,18 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>qCTKAddRemoveComboBox</class>
+   <extends>QWidget</extends>
+   <header>qCTKAddRemoveComboBox.h</header>
+  </customwidget>
+  <customwidget>
    <class>qCTKSliderSpinBoxWidget</class>
    <extends>QWidget</extends>
    <header>qCTKSliderSpinBoxWidget.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLNodeSelector</class>
-   <extends>QWidget</extends>
+   <extends>qCTKAddRemoveComboBox</extends>
    <header>qMRMLNodeSelector.h</header>
   </customwidget>
   <customwidget>
