--- a/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
+++ b/QTModules/TractographyFiducialSeeding/Resources/UI/qSlicerTractographyFiducialSeedingModule.ui
@@ -143,10 +143,14 @@
      <property name="text">
       <string>Stopping Track Curvature</string>
      </property>
+
     </widget>
    </item>
    <item row="6" column="1">
     <widget class="qCTKSliderSpinBoxWidget" name="StoppingCurvatureSpinBoxLabel">
+     <property name="minimum">
+      <double>0.100000000000000</double>
+     </property>
      <property name="maximum">
       <double>10.000000000000000</double>
      </property>
