--- a/Libs/qCTKWidgets/Plugins/Resources/qCTKWidgetsPlugins.qrc
+++ b/Libs/qCTKWidgets/Plugins/Resources/qCTKWidgetsPlugins.qrc
@@ -2,12 +2,15 @@
   <qresource>
     <file>Icons/combobox.png</file>
     <file>Icons/doublespinbox.png</file>
+    <file>Icons/groupbox.png</file>
     <file>Icons/groupboxcollapsible.png</file>
     <file>Icons/hrangeslider.png</file>
     <file>Icons/hslider.png</file>
     <file>Icons/listbox.png</file>
+    <file>Icons/listview.png</file>
     <file>Icons/pushbutton.png</file>
     <file>Icons/sliderspinbox.png</file>
+    <file>Icons/table.png</file>
     <file>Icons/textedit.png</file>
     <file>Icons/vspacer.png</file>
     <file>Icons/widget.png</file>
