--- a/Base/QTCoreModules/Resources/UI/qSlicerTransformsModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerTransformsModule.ui
@@ -90,7 +90,7 @@
          </widget>
         </item>
         <item>
-         <widget class="qMRMLNodeSelector" name="TransformNodeSelector">
+         <widget class="qMRMLNodeComboBox" name="TransformNodeSelector">
           <property name="editEnabled">
            <bool>false</bool>
           </property>
@@ -344,9 +344,9 @@
    <header>qMRMLMatrixWidget.h</header>
   </customwidget>
   <customwidget>
-   <class>qMRMLNodeSelector</class>
-   <extends>QWidget</extends>
-   <header>qMRMLNodeSelector.h</header>
+   <class>qMRMLNodeComboBox</class>
+   <extends>QComboBox</extends>
+   <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLTransformSliders</class>
