--- a/Base/QTCoreModules/Resources/UI/qSlicerCamerasModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerCamerasModule.ui
@@ -41,7 +41,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="qMRMLNodeSelector" name="ViewNodeSelector">
+       <widget class="qMRMLNodeComboBox" name="ViewNodeSelector">
         <property name="nodeTypes">
          <stringlist>
           <string>vtkMRMLViewNode</string>
@@ -57,7 +57,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="qMRMLNodeSelector" name="CameraNodeSelector">
+       <widget class="qMRMLNodeComboBox" name="CameraNodeSelector">
         <property name="nodeTypes">
          <stringlist>
           <string>vtkMRMLCameraNode</string>
@@ -91,9 +91,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>qMRMLNodeSelector</class>
+   <class>qMRMLNodeComboBox</class>
    <extends>QWidget</extends>
-   <header>qMRMLNodeSelector.h</header>
+   <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
    <class>qSlicerWidget</class>
